--- a/nhso1/package.json
+++ b/nhso1/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main":"index.js",
-  "homepage": "./",
+
+  "homepage": "http://localhost/nhso/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
