--- a/nhso1/package.json
+++ b/nhso1/package.json
@@ -4,14 +4,12 @@
   "version": "0.0.0",
   "type": "module",
 
-  "homepage": "http://localhost/nhso/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
- 
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
@@ -23,7 +21,8 @@
     "moment-timezone": "^0.5.45",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-moment": "^1.1.3"
+    "react-moment": "^1.1.3",
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
